# resources/views/mail/feedback/submitted.blade.php
@@ -1,0 +1,11 @@
+<x-mail::message>
+# Feedback received
+
+**Category:** {{ $category }}
+
+**From:** {{ $user->name }} ({{ $user->email }})
+
+**Message:**
+
+{!! nl2br(e($feedbackMessage)) !!}
+</x-mail::message>
